[gd_scene load_steps=8 format=3 uid="uid://6aunjai2qx33"]

[ext_resource type="Script" path="res://scripts/spawn_pins.gd" id="1_fkdds"]
[ext_resource type="Texture2D" uid="uid://dotfyf8ltngul" path="res://assets/oso.png" id="2_kyw2s"]
[ext_resource type="Script" path="res://scripts/example.gd" id="3_hxfs4"]
[ext_resource type="Script" path="res://scripts/Timer_pop.gd" id="4_31o42"]
[ext_resource type="Texture2D" uid="uid://bpalvaw6w0hqd" path="res://assets/Google_Maps_pin.svg (1).png" id="5_wrl0d"]
[ext_resource type="Script" path="res://scripts/taskBar.gd" id="6_s3ivv"]
[ext_resource type="Script" path="res://scripts/stressBar.gd" id="7_wr1g0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_fkdds")
metadata/_edit_vertical_guides_ = [2435.0, 2337.0, 1063.0]

[node name="Oso" type="Sprite2D" parent="."]
position = Vector2(959.465, 627.914)
scale = Vector2(1.65544, 1.46066)
texture = ExtResource("2_kyw2s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 808.0
offset_top = 103.0
offset_right = 987.0
offset_bottom = 142.0
script = ExtResource("3_hxfs4")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 507.0
offset_top = 25.0
offset_right = 864.0
offset_bottom = 114.0
text = "recurso 1"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.134
anchor_top = -0.201
anchor_right = -0.134
anchor_bottom = -0.201
offset_left = -554.014
offset_top = 378.839
offset_right = -329.014
offset_bottom = 446.839
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Timer_pop" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource("4_31o42")

[node name="pin" type="Button" parent="."]
offset_left = 485.0
offset_top = 187.0
offset_right = 1693.0
offset_bottom = 2289.0
scale = Vector2(0.0417586, 0.0289102)
icon = ExtResource("5_wrl0d")
flat = true

[node name="taskBar" type="Line2D" parent="pin"]
position = Vector2(23.9471, 2317.52)
scale = Vector2(5.71156, 6.16982)
points = PackedVector2Array(0, 0, 200, 0, 0, 0, 0, 0)
width = 40.0
default_color = Color(1, 0.129412, 0.180392, 1)
script = ExtResource("6_s3ivv")

[node name="taskTimer" type="Timer" parent="pin/taskBar"]
autostart = true

[node name="stressBar" type="Line2D" parent="."]
position = Vector2(961, 735)
points = PackedVector2Array(0, 0, 0, 0, 4, 0, 0, 0)
width = 60.0
default_color = Color(1, 0.156863, 0.0352941, 1)
script = ExtResource("7_wr1g0")

[connection signal="button_down" from="Control/Button" to="Control" method="_on_button_button_down"]
[connection signal="no_time" from="pin/taskBar" to="stressBar" method="_on_task_bar_no_time"]
[connection signal="timeout" from="pin/taskBar/taskTimer" to="pin/taskBar" method="_on_task_timer_timeout"]
